@@ -1,4 +1,6 @@
 2018-04-22  Patrick Uiterwijk  <puiterwijk@redhat.com>
+	* tests/: Updates for the new RPM signature status output
+
 	* src/server_common.py: Rename gpg_decrypt to gpg_decrypt_symmetric
 
 2018-03-24  Patrick Uiterwijk  <puiterwijk@redhat.com>
